rackognition and swagger
implementation de aws rekognition et adaptation du swagger, plus ajout d'exemples et liens
